2009-01-02  Bruce van der Kooij  <brucevdkooij@gmail.com>

	* nautilussvn/lib/dbus/status_monitor.py:
	DBus needs to be made thread-aware using thread_init calls.
	
	* nautilussvn/lib/extensions/nautilus/NautilusSvn.py:
	* nautilussvn/lib/vcs/svn.py:
	Still having some PySVN problems with threading so create a client when
	it is going to be used, not as an instance variable. Still means we'll
	have cache problems (two threads accesing the same cache).
	
	* nautilussvn/tests/dbus/dbus_threading.py:
	* nautilussvn/tests/dbus/status_monitor_add_watch.py:
	* nautilussvn/tests/dbus/status_monitor_listener.py:
	Some more tests (this should be done in a single class, but it helped me 
	enough for now).

2009-01-02  Bruce van der Kooij  <brucevdkooij@gmail.com>

	* nautilussvn/lib/dbus/__init__.py:
	* nautilussvn/lib/dbus/status_monitor.py:
	* nautilussvn/lib/extensions/nautilus/NautilusSvn.py:
	Started implementing DBus to get around the threading problems, doesn't 
	work yet but I hope I can get it to work tomorrow.
	
	* nautilussvn/lib/vcs/__init__.py:
	* nautilussvn/lib/vcs/svn.py:
	Moved the StatusMonitor to the SVN module.
	
	* nautilussvn/tests/dbus/status_monitor_exit.py:
	A script to properly stop the DBus service.

2009-01-01  Bruce van der Kooij  <brucevdkooij@gmail.com>

	* nautilussvn/lib/extensions/nautilus/NautilusSvn.py:
	Forgot to add watch for the path so only an initial status check is done. 
	after adding a path. Also removed some VCS related code from the inotify
	handler (tiny little bit of VCS abstraction).
	* nautilussvn/lib/vcs/svn.py:
	FIXME: multi-threading problems galore, PySVN can only be used by one
	thread at a time and I at the moment it's being used frmo multiple threads.

2008-12-31  Bruce van der Kooij  <brucevdkooij@gmail.com>

	* nautilussvn/lib/decorators.py:
	time as a function name conflicts with time module, so changed to timeit.
	
	* nautilussvn/lib/extensions/nautilus/NautilusSvn.py: